[gd_scene load_steps=9 format=3 uid="uid://boa3sls2sg5bj"]

[ext_resource type="PackedScene" uid="uid://imhfhokeb7mm" path="res://Scenes/MusicSheet/GSignature.tscn" id="1_agoxi"]
[ext_resource type="PackedScene" uid="uid://21llw1l7bfy3" path="res://Scenes/MusicSheet/GKey.tscn" id="1_l0nu6"]
[ext_resource type="Script" path="res://Scenes/MusicSheet/PreMeasure.gd" id="1_l6u5m"]
[ext_resource type="PackedScene" uid="uid://bd6ehemyihf5i" path="res://Scenes/MusicSheet/TimeSignature.tscn" id="1_m7heh"]
[ext_resource type="PackedScene" uid="uid://bkbdexn6gf66n" path="res://Scenes/MusicSheet/MSLine.tscn" id="2_p21ij"]
[ext_resource type="PackedScene" uid="uid://cc17edknpjwf2" path="res://Scenes/MusicSheet/FKey.tscn" id="3_lc1aw"]
[ext_resource type="PackedScene" uid="uid://cyrgifa2c1r3x" path="res://Scenes/MusicSheet/Figures/CRNote_B.tscn" id="4_m003r"]
[ext_resource type="PackedScene" uid="uid://caykbfqkvdflq" path="res://Scenes/MusicSheet/FSignature.tscn" id="5_n24lu"]

[node name="PreMeasure" type="Control"]
custom_minimum_size = Vector2i(240, 170)
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -85.0
offset_right = 240.0
offset_bottom = 85.0
grow_vertical = 2
script = ExtResource("1_l6u5m")

[node name="Control2" type="HBoxContainer" parent="."]
offset_left = 185.0
offset_top = 10.0
offset_right = 256.0
offset_bottom = 50.0
scale = Vector2(0.6, 0.6)

[node name="CRNote" parent="Control2" instance=ExtResource("4_m003r")]
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 0.0
offset_right = 15.0
offset_bottom = 40.0
grow_vertical = 1

[node name="Label" type="Label" parent="Control2"]
offset_left = 19.0
offset_right = 71.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "= 60"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2i(0, 170)
offset_right = 188.0
offset_bottom = 170.0
theme_override_constants/separation = 0

[node name="ClefBox" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2i(60, 170)
layout_mode = 3
anchors_preset = 0
offset_right = 60.0
offset_bottom = 170.0
mouse_filter = 1

[node name="GKey" parent="HBoxContainer/ClefBox" instance=ExtResource("1_l0nu6")]

[node name="FKey" parent="HBoxContainer/ClefBox" instance=ExtResource("3_lc1aw")]
visible = false

[node name="KeyBox" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2i(140, 170)
layout_mode = 3
anchors_preset = 0
offset_left = 60.0
offset_right = 200.0
offset_bottom = 170.0
mouse_filter = 1

[node name="GSignature" parent="HBoxContainer/KeyBox" instance=ExtResource("1_agoxi")]

[node name="FSignature" parent="HBoxContainer/KeyBox" instance=ExtResource("5_n24lu")]
visible = false

[node name="TimeBox" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2i(40, 170)
layout_mode = 3
anchors_preset = 0
offset_left = 200.0
offset_right = 240.0
offset_bottom = 170.0
mouse_filter = 1

[node name="TimeSignature" parent="HBoxContainer/TimeBox" instance=ExtResource("1_m7heh")]

[node name="Control" type="Control" parent="."]
clip_contents = true
custom_minimum_size = Vector2i(0, 74)
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -37.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MSLine" parent="Control" instance=ExtResource("2_p21ij")]
custom_minimum_size = Vector2i(180, 10)
offset_top = -37.0
offset_right = 180.0
offset_bottom = -27.0

[node name="MSLine2" parent="Control" instance=ExtResource("2_p21ij")]
custom_minimum_size = Vector2i(180, 10)
offset_top = -21.0
offset_bottom = -11.0

[node name="MSLine3" parent="Control" instance=ExtResource("2_p21ij")]
custom_minimum_size = Vector2i(180, 10)

[node name="MSLine4" parent="Control" instance=ExtResource("2_p21ij")]
custom_minimum_size = Vector2i(180, 10)
offset_top = 11.0
offset_bottom = 21.0

[node name="MSLine5" parent="Control" instance=ExtResource("2_p21ij")]
custom_minimum_size = Vector2i(180, 10)
offset_top = 27.0
offset_bottom = 37.0
